# chooseyourperfume

./: .copier-answers.yml  LICENSE  README.md  app_cyp.py  app_perfume.py  chooseyourperfume.py  pyproject.toml
docs/source/: conf.py
docs/source/api/: chooseyourperfume.rst  modules.rst
notebooks/: project_report.ipynb
src/: logic_cyp.py
src/chooseyourperfume/: __init__.py  app.py  chem_analysis.py  dataset.py  envcyp.yml  logic_cyp.py  questionnaire.py
tests/: rdkit_test.py  test_app_perfume.py  test_chemanalysis.py  test_dataset.py  test_dico.py  test_example_module.py  test_logic_cyp.py  test_streamlit_molecules.py
